# l06-chat

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
chat-core/: Cargo.toml
chat-core/src/: chat_type.rs  event.rs  lib.rs
chat-core/src/middlewares/: auth.rs
chat-core/src/models/: user.rs
chat-core/src/utils/: jwt.rs  mod.rs  redis_lock.rs
chat-server/: Cargo.toml  chat.yaml
chat-server/examples/: redis_demo.rs
chat-server/fixtures/keys/: ed25519-private.pem  ed25519-public.pem
chat-server/src/: config.rs  error.rs  lib.rs  main.rs  router.rs
chat-server/src/handler/: auth.rs  chat.rs  message.rs  mod.rs  user.rs  workspace.rs
chat-server/src/middlewares/: mod.rs
chat-server/src/models/: chat.rs  chat_members.rs  message.rs  mod.rs  outbox_message.rs  user.rs  workspace.rs
chat-server/src/mq/: mod.rs
chat-server/src/mq/producers/: mod.rs  outbox_message_producer.rs
chat-server/src/schedules/: mod.rs
chat-server/src/services/: chat_service.rs  message_publish_service.rs  message_service.rs  mod.rs  outbox_message_service.rs  user_service.rs  workspace_service.rs
migrations/: 20251120062825_initial.sql  20251122143136_table_data.sql
notify-server/: Cargo.toml  index.html  notify.yaml
notify-server/src/: config.rs  lib.rs  main.rs  router.rs  task.rs
notify-server/src/handler/: sse.rs
