[workspace]
members = ["chat-core", "chat-server", "notify-server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
serde_yaml_bw = "2.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "mysql",
    "runtime-tokio-rustls",
    "chrono",
    "derive",
    "macros",
    "migrate",
] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
redis = { version = "0.32.7", features = ["tokio-rustls-comp", "json"] }
#jwt-simple = { version = "0.12.13" }
jwt-simple = { version = "0.12.13", default-features = false, features = [
    "pure-rust",
] }
tower = "0.5.2"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
