[package]
name = "chat-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
jwt-simple = { version = "0.12.13" }
anyhow = { workspace = true }
redis = { version = "0.32.7", features = ["tokio-rustls-comp", "json"] }
