[package]
name = "chat-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
axum-extra = { workspace = true }
jwt-simple = { workspace = true }
anyhow = { workspace = true }
redis = { workspace = true }
