[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat-core = { path = "../chat-core" }
anyhow = { workspace = true }
axum = { workspace = true }
serde_yaml_bw = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
tower = { workspace = true }
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "cors",
    "set-header",
    "trace",
] }
jwt-simple = { workspace = true }
axum-extra = { workspace = true }
uuid = { version = "1.18.1", features = ["v7"] }
tokio-cron-scheduler = "0.15.1"
redis = { workspace = true }

[dev-dependencies]
sqlx-db-tester = { version = "0.7.1", features = ["mysql"] }
