[package]
name = "notify-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum-extra = { version = "0.12.2", features = ["typed-header"] }
anyhow = { workspace = true }
axum = { workspace = true }
serde_yaml_bw = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = "0.3.31"
futures-util = "0.3.31"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
